Drop deprecated code and update synonym with missing references (#100)
* Remove deprecated methods

* Remove references to emptyMap

* Replace emptyList

* Replace emptySet

* Replace use of singleton

* Update synonym got missing references